# newlib

./: .gitignore  config.sub  configure  configure.ac
newlib/: configure.host
newlib/libc/include/: pthread.h
newlib/libc/include/sys/: config.h  features.h
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/hipperos/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  configure.in  crt0.c  dummysys.c  getreent.c  syscalls.c
newlib/libc/sys/hipperos/include/sys/: _pthreadtypes.h  cpuset.h  mman.h
newlib/libc/sys/hipperos/machine/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
newlib/libc/sys/hipperos/machine/aarch64/: exit.S
newlib/libc/sys/hipperos/machine/arm/: Makefile.in  aclocal.m4  configure  configure.ac  exit.S
newlib/libc/sys/hipperos/machine/i386/: exit.S
newlib/libc/sys/hipperos/machine/powerpc/: Makefile.am  exit.S
